fixing #3 by making research interests dissapear on small displays

--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -63,7 +63,7 @@
     font-weight: 400;
 
     @include media($small-display) {
-      width: 15%;
+       @include span-columns(16 of 16);
     }
   }
 
@@ -79,9 +79,15 @@
       padding-bottom: 0px;
     }
 
+    @include media($medium-display) {
+      display: none;
+    }
+
     @include media($small-display) {
       display: none;
     }
+
+ 
   }
 
   .interests {
@@ -92,7 +98,14 @@
     line-height: 2;
     bottom: 0;
     right: 0;
+    
   }
+
+  @include media ($small-display) {
+  .interests {
+    display: none;
+  }
+}
 
   .alumni {
     @include span-columns(5 of 16);
